@@ -1,4 +1,4 @@
-// Copyright 2005, 2007, 2008, 2009, 2010 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2007, 2008, 2009, 2010, 2011 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.dao;
 
 import java.sql.*;
@@ -16,7 +16,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A Data Access Object to load cross-application User data.
  * @author Luke
- * @version 3.1
+ * @version 3.6
  * @since 1.0
  */
 
@@ -131,8 +131,9 @@ public class GetUserData extends DAO implements CachingDAO {
 	public UserData get(int id) throws DAOException {
 		
 		// Check the cache
-		if (_usrCache.contains(new Integer(id)))
-			return _usrCache.get(new Integer(id));
+		UserData ud = _usrCache.get(Integer.valueOf(id));
+		if (ud != null)
+			return ud;
 		
 		try {
 			setQueryMax(1);
